--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Aguafina+Script&family=La+Belle+Aurore&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz@8..144&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=VT323&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -26,33 +27,37 @@ body {
 }
 
 
-
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#sp_image_1 {
+  height: 32px;
+  /* width: 32px; */
+  background: url("../assets/Run.png")
+    0px 0px ;
+  animation: play 0.9s steps(12) infinite;
+}
+@keyframes play {
+  100% {
+    /* transform: translateX(12rem); */
+    background-position: -1440px;
+  }
 }
 
-.container {
+#sp_image_2 {
+  height: 32px;
+  width: 32px;
+  background: url("../assets/wall.png")
+    0px 0px ;
+  animation: play2 0.5s steps(5) infinite;
+}
+@keyframes play2 {
+  100% {
+    background-position: -1120px;
+  }
+}
+
+/* #sp_container {
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 30px;
-}
-
-.item {
-  width: inherit;
-  height: inherit;
-  background: white;
-  transform-origin: 50% 100%;
-}
-
-.wrapper {
-  width: 150px;
-  height: 150px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-}
+  background: url("../assets/back.jpg") 0px 0px;
+  animation: play2 0.5s steps(5) infinite;
+  background-size: contain;
+} */
