--- a/src/index.css
+++ b/src/index.css
@@ -11,16 +11,12 @@
 
 @layer base {
   html {
-    /* font-family: 'Roboto Flex', sans-serif; */
     font-family: 'Caveat', cursive;
     font-weight : 500
   }
 }
 body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
@@ -29,35 +25,25 @@ body {
 
 #sp_image_1 {
   height: 32px;
-  /* width: 32px; */
   background: url("../assets/Run.png")
     0px 0px ;
   animation: play 0.9s steps(12) infinite;
 }
 @keyframes play {
   100% {
-    /* transform: translateX(12rem); */
-    background-position: -1440px;
+    background-position: -1440px 0;
   }
 }
 
 #sp_image_2 {
   height: 32px;
   width: 32px;
-  background: url("../assets/wall.png")
+  background: url("../assets/attack.png")
     0px 0px ;
-  animation: play2 0.5s steps(5) infinite;
+  animation: play2 1s steps(21) infinite;
 }
 @keyframes play2 {
   100% {
-    background-position: -1120px;
+    background-position:  -2604px;
   }
 }
-
-/* #sp_container {
-  width: 100%;
-  height: 100%;
-  background: url("../assets/back.jpg") 0px 0px;
-  animation: play2 0.5s steps(5) infinite;
-  background-size: contain;
-} */
