--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 @layer base {
   html {
     font-family: 'Caveat', cursive;
-    font-weight : 500
+    font-weight : 500;
   }
 }
 body {
@@ -21,7 +21,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   background-color: #292929;
-  
 }
 
 
